#1386: Added entityTypeResults query and EntityTypeResults and EntityTypeResult objects